--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,3 +1,5 @@
 // Variables
 
 $header-width: 199px;
+
+$scrollbar: calc(100vw - 100%);
